--- a/submissions/AnnGrynchuk/popup/css/style.css
+++ b/submissions/AnnGrynchuk/popup/css/style.css
@@ -8,7 +8,20 @@ body {
 	justify-content: center;
 	margin-top: 20px;
 }
+.popup_label {
+	cursor: pointer;
+	text-transform: uppercase;
+    font-size: 16px;
+    position: relative;
+	left: 60px;
+	top: 10px;
+}
+.popup_label:hover {
+	font-size: 18px;
+	color: rgb(144, 43, 238);
+}
 .popup_checkbox {
+	position: absolute;
 	cursor: pointer;
 	height: 32px;
 	width: 32px;
@@ -34,7 +47,7 @@ body {
 	content: '';
 	position: absolute;
 	top: -11px;
-	left: 139px;
+	left: 143px;
 	border-top: 1px solid transparent;
 	border-right: 1px solid transparent;
 	background: #fff;
@@ -68,13 +81,17 @@ body {
 	border-radius: 3px;
 	z-index: 2;
 	cursor: pointer;
+	outline: 0;
 }
 .menu_item:hover {
 	border: 1px solid #A8A8A8;
 }
-.menu_item:focus {
+.menu_item:focus-within {
 	border: 1px solid transparent;
-	box-shadow: 0 0 5px black;
+	box-shadow: 0 0 5px rgb(17, 212, 247);
+}
+.link {
+	outline: 0;
 }
 .icon {
 	width: 48px;
