--- a/submissions/feroxes/google-popup/style.css
+++ b/submissions/feroxes/google-popup/style.css
@@ -9,7 +9,7 @@
 
 .menu {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 290px;
     font-size: 14px;
@@ -30,18 +30,18 @@
 .dots_label {
     width: 20px;
     height: 20px;
-    background: url("img/google_sprite.png") no-repeat;
+    background: url("img/big_brother_sprite.png") no-repeat;
     background-position: -132px -42px;
     background-size: 510px;
     cursor: pointer;
     position: absolute;
     z-index: 999;
     top: 25px;
-    right: 140px;
+    right: 145px;
 }
 
 .dots_label:hover {
-    background: url("img/google_sprite.png") no-repeat;
+    background: url("img/big_brother_sprite.png") no-repeat;
     background-position: -132px -42px;
     background-size: 510px;
 }
@@ -51,7 +51,7 @@
     height: 20px;
     border-radius: 100%;
     cursor: pointer;
-    background: url("img/google_sprite.png") no-repeat;
+    background: url("img/big_brother_sprite.png") no-repeat;
     background-position: -202.5px -22px;
     background-size: 550px;
     background-color: #737373;
@@ -67,7 +67,7 @@
     cursor: pointer;
 }
 
-.google_services {
+.big-brother_services {
     width: 350px;
     height: 515px;
     border: 1px solid #dadada;
@@ -84,7 +84,7 @@
     cursor: pointer;
 }
 
-.google_services-icon {
+.big-brother_services-icon {
     width: 90px;
     height: 95px;
     margin: 10px;
@@ -95,15 +95,15 @@
     align-items: center;
 }
 
-.google_services-icon:hover {
+.big-brother_services-icon:hover {
     border: 1px solid #dadada;
 }
 
-.google_services-icon a:focus {
+.big-brother_services-icon a:focus {
     box-shadow: 0 0 0 3px rgb(123, 176, 255);
 }
 
-.google_services-icon div {
+.big-brother_services-icon div {
     width: 55px;
     height: 55px;
     background-size: 75px;
@@ -111,81 +111,81 @@
 }
 
 .search {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -1535px;
 }
 
 .maps {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -242px;
 }
 
 .youtube {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -647px;
 }
 
 .news {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -1210px;
 }
 
 .gmail {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -1290px;
 }
 
 .contacts {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -2507px;
 }
 
 .drive {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -2345px;
 }
 
 .calendar {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -970px;
 }
 
-.googleplus {
-    background: url("img/google_ico_sprite.png") no-repeat;
+.bigplus {
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -485px;
 }
 
 .translator {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -1940px;
 }
 
 .photo {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -1780px;
 }
 
 .docs {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -1698px;
 }
 
 .playmarket {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -2748px;
 }
 
 .account {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -81px;
 }
 
 .sheets {
-    background: url("img/google_ico_sprite.png") no-repeat;
+    background: url("img/big_brother_ico_sprite.png") no-repeat;
     background-position-y: -325px;
 }
 
-.google_services-button {
+.big-brother_services-button {
     width: 100%;
     height: 30px;
     margin: 0;
@@ -199,7 +199,7 @@
     display: none;
 }
 
-.dots_input:checked ~ .google_services {
+.dots_input:checked ~ .big-brother_services {
     display: flex;
 }
 
