--- a/submissions/yulyasystem/html-css-pop-up/style.css
+++ b/submissions/yulyasystem/html-css-pop-up/style.css
@@ -1,9 +1,7 @@
-* {
+html {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
-  text-decoration: none;
-  list-style: none;
-  font-size:14px;
+  font-size: 14px;
 }
 
 .nav-list {
@@ -14,10 +12,12 @@
 
 .list-item {
   margin-left: 20px;
+  list-style: none;
 }
 
 .nav-link {
   color: rgb(112, 108, 108);
+  text-decoration: none;
 }
 
 .list-item>nav-link:visited {
@@ -26,7 +26,6 @@
 
 .box-image {
   margin-top: 2px;
-  margin-left: 20px;
   opacity: 0.6;
   cursor: pointer;
 }
@@ -35,10 +34,12 @@
   opacity: 1;
 }
 
-.hidden {
+.visually-hidden {
   position: absolute;
-  top: -9999px;
-  left: -9999px;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
 
 .application-menu {
@@ -48,10 +49,8 @@
   right: 50px;
   background: #ffffff;
   border: 1px solid #cccccc;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .15),
-    0 6px 20px 0 rgba(0, 0, 0, .14);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15), 0 6px 20px 0 rgba(0, 0, 0, 0.14);
 }
-
 
 .application-menu::before {
   content: "";
@@ -97,8 +96,14 @@
   background-position: center;
   background-repeat: no-repeat;
 }
-.bell:hover{
+
+.bell:hover {
   opacity: 1;
+}
+
+.list-item:focus ~.nav-link {
+  outline: 2px solid Highlight;
+  outline: auto 5px -webkit-focus-ring-color;
 }
 
 .avatar {
@@ -117,6 +122,7 @@
   flex-direction: column;
   align-items: center;
   margin: 0 13px;
+  text-decoration: none;
 }
 
 .services-label {
@@ -127,25 +133,31 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
-  width: 100%;
   padding: 14px;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 .additional-apps {
   display: none;
 }
 
-.input-services-box:checked~.application-menu {
+.input-services-box:focus ~.label-services {
+  outline: 2px solid Highlight;
+  outline: auto 5px -webkit-focus-ring-color;
+}
+
+.input-more-apps:focus ~.label-apps-more {
+  outline: 2px solid Highlight;
+  outline: auto 5px -webkit-focus-ring-color;
+}
+
+.input-services-box:checked ~.application-menu {
   display: block;
 }
 
-.input-more-apps:checked~.additional-apps {
+.input-more-apps:checked ~.additional-apps {
   display: block;
 }
-
-
-
 
 /* positions for icons */
 .service-maps {
